--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,10 +12,10 @@
     tools:context="org.seniorsigan.mangareader.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <fragment
+    <FrameLayout
+        android:id="@+id/fragments_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:name="org.seniorsigan.mangareader.ui.fragments.ChapterListFragment"
-        tools:layout="@layout/fragment_manga_list"
-        android:id="@+id/fragment_history_list" />
+        android:layout_height="match_parent">
+    </FrameLayout>
+
 </RelativeLayout>
