--- a/app/src/main/res/layout/activity_chapter.xml
+++ b/app/src/main/res/layout/activity_chapter.xml
@@ -6,5 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/page_background"
     android:id="@+id/chapter_view"
+    android:fitsSystemWindows="false"
+    android:clipToPadding="false"
     tools:context=".ChapterActivity">
 </org.seniorsigan.mangareader.viewpager.ViewPagerFix>
