--- a/app/src/main/res/layout/fragment_chapter_list.xml
+++ b/app/src/main/res/layout/fragment_chapter_list.xml
@@ -4,6 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/refresh_chapter_list"
         android:layout_width="match_parent"
