add manga page, add suport for searching manga

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="chapter_item_height">48dp</dimen>
     <dimen name="z_app_bar">4dp</dimen>
     <dimen name="spacing_huge">64dp</dimen>
+    <dimen name="app_bar_height">380dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
