--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -5,15 +5,15 @@
         <item
             android:id="@+id/nav_popular"
             android:icon="@drawable/ic_whatshot_black_24dp"
-            android:title="Popular" />
+            android:title="@string/popular" />
         <item
             android:id="@+id/nav_bookmarks"
             android:icon="@drawable/ic_star_black_24dp"
-            android:title="Bookmarks" />
+            android:title="@string/bookmarks" />
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings_black_24dp"
-            android:title="Settings" />
+            android:title="@string/settings" />
     </group>
 
 </menu>
