--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
+    <dimen name="drawer_width">@dimen/match_parent</dimen>
+    <dimen name="spacing_normal">8dp</dimen>
+    <dimen name="z_drawer">16dp</dimen>
+    <dimen name="filter_icon_size">40dp</dimen>
+    <item name="match_parent" format="integer" type="dimen">-1</item>
 </resources>
