--- a/app/src/main/res/layout/manga_item.xml
+++ b/app/src/main/res/layout/manga_item.xml
@@ -1,41 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:clickable="true"
     android:focusable="true"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp"
     android:background="?android:attr/selectableItemBackground"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="4dp"
+    android:gravity="center">
 
-    <RelativeLayout
-        android:layout_gravity="center_horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <android.support.v7.widget.CardView
+        card_view:cardCornerRadius="2dp"
+        android:layout_gravity="center"
+        android:layout_margin="4dp"
+        android:layout_width="@dimen/manga_column_width"
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/manga_item_cover"
-            android:scaleType="centerCrop"
-            android:layout_width="@dimen/manga_cover_width"
-            android:layout_height="@dimen/manga_cover_height"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true" />
-
-        <LinearLayout
-            android:layout_centerVertical="true"
-            android:orientation="vertical"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/manga_item_cover"
-            android:layout_toRightOf="@+id/manga_item_cover">
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/manga_item_cover"
+                android:src="@drawable/manga_cover_placeholder"
+                android:scaleType="centerCrop"
+                android:layout_centerHorizontal="true"
+                android:layout_width="@dimen/manga_column_width"
+                android:layout_height="@dimen/manga_column_height"
+                android:layout_gravity="center_horizontal"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:contentDescription="@string/manga_cover" />
+
             <TextView
+                android:background="@color/manga_title_background"
                 android:id="@+id/manga_item_title"
+                android:textSize="18sp"
+                android:textColor="@android:color/white"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:layout_width="wrap_content"
+                android:maxLines="2"
+                android:lines="2"
+                android:layout_gravity="center_horizontal"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignBottom="@+id/manga_item_cover"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="Super duper manga!" />
-        </LinearLayout>
-    </RelativeLayout>
+                android:layout_marginTop="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                tools:text="Super duper manga!"
+                android:ellipsize="end" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
