--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,55 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="org.seniorsigan.mangareader.ui.SearchActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="org.seniorsigan.mangareader.ui.SearchActivity">
-
-    <View
-        android:background="@color/scrim"
-        android:id="@+id/scrim"
+    android:orientation="vertical">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/AppTheme.SearchView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="?attr/actionBarSize">
+        <SearchView
+            android:id="@+id/search_view"
+            android:queryHint="@string/search_hint"
+            android:iconifiedByDefault="false"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </android.support.v7.widget.Toolbar>
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/fragments_container"
+        android:background="@android:color/white"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.SearchView"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
-            <SearchView
-                android:id="@+id/search_view"
-                android:queryHint="@string/search_hint"
-                android:iconifiedByDefault="false"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </android.support.v7.widget.Toolbar>
+        android:layout_height="match_parent">
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:indeterminate="true"
+            android:visibility="gone"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-        <FrameLayout
-            android:id="@+id/fragments_container"
-            android:background="@android:color/white"
+        <android.support.v7.widget.RecyclerView
+            tools:listitem="@layout/manga_item"
+            android:id="@+id/rv_manga_list"
+            android:scrollbars="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ProgressBar
-                android:id="@+id/progressBar"
-                android:indeterminate="true"
-                android:visibility="gone"
-                android:paddingBottom="@dimen/spacing_huge"
-                android:paddingTop="@dimen/spacing_huge"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_manga_list"
-                android:scrollbars="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal|top" />
-        </FrameLayout>
-    </LinearLayout>
-</FrameLayout>
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal|top" />
+    </RelativeLayout>
+</LinearLayout>
