--- a/app/src/main/res/layout/fragment_manga_list.xml
+++ b/app/src/main/res/layout/fragment_manga_list.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -24,7 +23,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/manga_item"
-            app:layoutManager="android.support.v7.widget.GridLayoutManager"
             />
     </android.support.v4.widget.SwipeRefreshLayout>
 
