--- a/app/src/main/res/layout/content_manga.xml
+++ b/app/src/main/res/layout/content_manga.xml
@@ -23,7 +23,7 @@
 
         <Button
             android:id="@+id/btn_manga_chapters"
-            android:text="Chapters"
+            android:text="@string/chapters"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal" />
