--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -11,6 +11,10 @@
             android:icon="@drawable/ic_star_black_24dp"
             android:title="@string/bookmarks" />
         <item
+            android:id="@+id/nav_feed"
+            android:icon="@drawable/ic_rss_feed_black_24dp"
+            android:title="@string/feed"/>
+        <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings_black_24dp"
             android:title="@string/settings" />
